packages/trader/src/AppV2/Containers/Positions/positions.scss
$TABS_HEIGHT: var(--core-size-2400);

.positions-page {
    height: 100%;
    background-color: var(--semantic-color-slate-solid-surface-frame-mid);
    position: relative;
    padding-bottom: var(--core-spacing-2800);

    .tab-list--container {
        display: block;
        justify-content: unset;
        background-color: var(--semantic-color-slate-solid-surface-frame-low);
        height: $TABS_HEIGHT;

        button {
            width: 50%;
            padding: 1.05rem 0;
        }
    }
    &__filter {
        &__wrapper {
            padding: var(--core-spacing-400);
            display: flex;
            gap: var(--core-spacing-400);
            overflow-x: auto;
            min-height: var(--core-spacing-2400);
            white-space: nowrap;

            -ms-overflow-style: none; /* Internet Explorer 10+ */
            scrollbar-width: none; /* Firefox */

            &::-webkit-scrollbar {
                display: none; /* Safari and Chrome */
            }

            .quill-chip {
                display: inline-flex;
            }
        }
    }
    .initial-loader {
        height: 100%;
    }
}

.positions-page-container {
    height: 100%;

    &__tabs {
        height: 100%;

        &-content {
            height: calc(100% - $TABS_HEIGHT);
            overflow: auto;

            & > div {
                height: 100%;

                .positions-page {
                    &__open,
                    &__closed {
                        height: 100%;
                        display: flex;
                        flex-direction: column;
                        overflow-y: scroll;

                        .load-more-spinner {
                            display: flex;
                            align-items: center;
                            justify-content: center;
                            width: 100%;
                            padding: var(--core-spacing-1000) 0;

                            svg {
                                animation: spin var(--motion-duration-deliberate) linear infinite;

                                @keyframes spin {
                                    to {
                                        -webkit-transform: rotate(360deg);
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

.text-field--custom {
    .quill-input {
        &-no-label__wrapper {
            position: relative;
            .input {
                padding-inline: var(--core-spacing-1700);
            }
        }
        &-label__label {
            position: absolute;
            top: 50%;
            transform: translateY(-50%);
            inset-inline-start: 0;
            z-index: 2;
        }
    }
}

